# hexstrike-ai

./: .dockerignore  .env  .env.development  .eslintrc.cjs  .firebaserc  .gitignore  .mcp.json  AUDIT_REPORT.md  App.tsx  Dockerfile  HEXSTRIKE_BAEL_INTEGRATION_TASKS.md  INSTALLATION.md  LICENSE  MCP_USAGE_GUIDE.md  MINDSYNC_SUMMARY.md  Memoryforensicsusingai  PRODUCTION_SYSTEM_DELIVERED.md  README.md  README_HexStrike_MCP_Client.md  SECURITY.md  WSL_SETUP.md  absolute_overlord.py  abyssal_33_logic.py  agent_teams_orchestrator.py  aion_core.py  apex_neuralis.py  automation_singularity.py  bael_core.py  bluetooth_reaper.py  bypass_omnibus.py  cloud_deployer.py  cognitive_dominance_core.py  dark_mirror_proxy.py  dark_vortex_engine.py  docker-compose.yaml  docker-compose.yml  egregore_coordinator.py  eternity_pulse.py  financial_singularity.py  firebase.json  (+76 more)
.claude/: launch.json
.codex-plugin/: plugin.json
.github/workflows/: hol-skill-validate.yml
components/: AnalysisSettings.tsx  AnimationDebugger.tsx  ApiKeyLoader.tsx  ApiKeyStatus.tsx  ClipCard.tsx  ClipPreview.tsx  ErrorBoundary.tsx  FirebaseTest.tsx  Header.tsx  InputTabs.tsx  LLMSelector.tsx  Layout.tsx  Loader.tsx  LoginPage.tsx  ModelSelector.tsx  MultiLLMClipCard.tsx  MultiLLMSelector.tsx  ProductionWarning.tsx  ScrollProgress.tsx  SimpleThemeSwitcher.tsx  ThemeProvider.tsx  ToastProvider.tsx  UITest.tsx  VideoInput.tsx
components/icons/: AnthropicIcon.tsx  BillingIcon.tsx  CopyIcon.tsx  DashboardIcon.tsx  GeminiIcon.tsx  HistoryIcon.tsx  LMStudioIcon.tsx  LoginIcon.tsx  LogoIcon.tsx  LogoutIcon.tsx  OpenAIIcon.tsx  SettingsIcon.tsx  UploadIcon.tsx  UserIcon.tsx  YouTubeIcon.tsx
dashboard/: hexstrike_dashboard.py  hexstrike_dashboard.sh
docker/: Dockerfile  docker-compose.yml  start-docker-mcp-server.sh
docker/config/: update-tools-databases.sh
docker/files/ghidra/: ExportProgramScript.java
docs/: tool_study_guide.md
hooks/: useAnalyses.ts  useAuth.ts  useDebounce.ts
local_ai_studio/: __init__.py  __main__.py  config.py  hardware.py  local-ai-studio-mcp.json  pyproject.toml  requirements.txt
local_ai_studio/chat/: __init__.py  engine.py  history.py
local_ai_studio/gui/: __init__.py  app.py
local_ai_studio/mcp/: __init__.py  server.py
local_ai_studio/models/: __init__.py  lora.py  manager.py  quantization.py
local_ai_studio/tools/: __init__.py  database.py  executor.py  filesystem.py  git_tools.py  python_sandbox.py  web.py
mindsync_oracle/: ARCHITECTURE.md  GETTING_STARTED.md  QUICKSTART.md  README.md  SAFE_FIRST_STEPS.md  UPGRADE_V2_DELIVERED.md  V10_PARLIAMENT_PROPOSAL.md  V3_INTEGRATION_COMPLETE.md  V4_MULTI_LLM_DELIVERED.md  V7_ETHICAL_GUIDELINES.md  V8_ETHICAL_GUIDELINES.md  adaptive_notifications.py  authorized_scope.yaml.example  chain_predictor.py  confidence_scorer.py  config.yaml  config_manager.py  ctf_lab_agent.py  deep_x_nexus.py  demo.py  demo_memory.db  federated_swarm.py  goal_sharding.py  hexstrike_integration.py  human_in_loop_controller.py  hybrid_memory_graph.py  live_threat_feed.py  mcp_integration.py  mindsync_memory.db  mindsync_oracle.py  mindsync_prod.py  multi_llm_orchestrator.py  notification_system.py  parallel_executor.py  realtime_x_stream.py  requirements.txt  sandbox_executor.py  scheduler.py  scope_validator.py  self_improvement.py  (+10 more)
mindsync_oracle/agents/: goal_engine.py  goal_engine_prod.py
mindsync_oracle/interfaces/: input_processor.py
mindsync_oracle/services/: agent_orchestrator.py  agent_orchestrator_prod.py
mindsync_oracle/storage/: memory_manager.py
monitoring/: metrics.py  prometheus.yml
monitoring/grafana/dashboards/: dashboard-provider.yml  (+1 more)
pages/: AboutPage.tsx  AllClipsPage.tsx  AnalyticsPage.tsx  Dashboard.tsx  ExportPage.tsx  HistoryPage.tsx  LandingPage.tsx  PricingPage.tsx  ProjectCreatePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  QuickAnalyzePage.tsx  SettingsPage.tsx  TrimClipsPage.tsx
public/: sw.js
scripts/: install_tools.sh
services/: fastVideoService.ts  ffmpegService.ts  geminiService.ts  instantVideoService.ts  llmService.ts  multiLLMService.ts  quickAnalysisService.ts
services/providers/: anthropicProvider.ts  geminiProvider.ts  lmstudioProvider.ts  openaiProvider.ts
skills/hexstrike-ai/: SKILL.md
tests/: openclip-pro-comprehensive.spec.ts  test_hexstrike_execution.py  test_intelligent_handler.py  test_parameter_optimizer.py
traefik/: traefik.yml
utils/: analysisConfig.ts  performance.ts  videoProcessor.ts
(+1 files in other folders)
