[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexstrike"
version = "0.0.2"
description = "Advanced AI-Powered Penetration Testing Framework with MCP Integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "HexStrike Team", email = "team@hexstrike.ai"}
]
license = "MIT"
keywords = ["penetration-testing", "cybersecurity", "ai", "mcp", "bug-bounty", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    # Core framework dependencies
    "flask>=2.3.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "fastmcp>=0.2.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "aiohttp>=3.8.0,<4.0.0",
]

[project.scripts]
hexstrike-server = "hexstrike_server:main"
hexstrike-mcp = "hexstrike_mcp:main"
hexstrike = "hexstrike_server:main"

[project.optional-dependencies]
# Development and testing
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

# Browser automation and web testing
browser = [
    "selenium>=4.15.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    "playwright>=1.40.0,<2.0.0",
    "requests-html>=0.10.0,<1.0.0",
    "lxml[html_clean]>=4.9.0,<6.0.0",
]

# Network security and penetration testing
security = [
    "mitmproxy>=9.0.0,<11.0.0",
    "scapy>=2.5.0,<3.0.0",
    "python-nmap>=0.7.1,<1.0.0",
    "paramiko>=3.3.0,<4.0.0",
    "cryptography>=41.0.0,<43.0.0",
]

# Binary analysis and reverse engineering
binary = [
    "pwntools>=4.10.0,<5.0.0",
    "angr>=9.2.0,<10.0.0",
    "capstone>=5.0.0,<6.0.0",
    "keystone-engine>=0.9.2,<1.0.0",
    "unicorn>=2.0.0,<3.0.0",
]

# Forensics and steganography
forensics = [
    "pillow>=10.0.0,<11.0.0",
    "python-magic>=0.4.27,<1.0.0",
    "exifread>=3.0.0,<4.0.0",
    "stegano>=0.11.0,<1.0.0",
]

# Cryptography and hash analysis
crypto = [
    "pycryptodome>=3.19.0,<4.0.0",
    "gmpy2>=2.1.0,<3.0.0",
]

# OSINT and reconnaissance
osint = [
    "shodan>=1.30.0,<2.0.0",
    "censys>=2.2.0,<3.0.0",
    "dnspython>=2.4.0,<3.0.0",
    "whois>=0.9.0,<1.0.0",
]

# All optional dependencies combined
all = [
    "hexstrike[browser]",
    "hexstrike[security]",
    "hexstrike[binary]",
    "hexstrike[forensics]",
    "hexstrike[crypto]",
    "hexstrike[osint]",
]

[project.urls]
Homepage = "https://github.com/hexstrike-ai/hexstrike"

[tool.setuptools]
py-modules = ["hexstrike_server", "hexstrike_mcp"]

[tool.uv]
package = true
